@@ -1,3 +1,9 @@
+2002-02-07  Fumitoshi UKAI  <ukai@debian.or.jp>
+
+	* [w3m-dev 03005] fix Bad cert ident
+	* istream.c (ssl_match_cert_ident): added
+	* istream.c (ssl_check_cert_ident): use ssl_match_cert_ident()
+
 2002-02-07  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>
 
 	* [w3m-dev 02999] don't ask accept bad cert when background downloading
